# backendsouls-calendar

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
deploy/: docker-compose.calendar-api.yml  docker-compose.dev.yml
deploy/dockerfiles/: calendar-api.Dockerfile  calendar-api.dev.Dockerfile  dev.Dockerfile
docs/: README.md
infrastructure/calendar-utils/: Cargo.toml
libraries/backendsouls-json-hal/: Cargo.toml
libraries/backendsouls-json-hal/src/: lib.rs
libraries/backendsouls-rfc8984/: Cargo.toml
modules/calendar-api/: Cargo.toml
modules/calendar-api/src/: app.rs  configuration.rs  environment.rs  lib.rs  main.rs  telemetry.rs  version.rs
modules/calendar-api/src/event/: mod.rs
modules/calendar-api/src/group/: mod.rs
modules/calendar-domain/: Cargo.toml
modules/calendar-domain/src/: lib.rs
scripts/: docker-clear.sh
src/: lib.rs  main.rs  version.rs
src/event/: mod.rs
src/task/: mod.rs
tests/manual/: http-client.env.json  version.rest
