[workspace]
resolver = "2"

members = [
    "modules/calendar-*"
]

default-members = [
    "modules/calendar-*"
]

[workspace.dependencies]
axum = { version = "0.6.20" }
tokio = { version = "1.32.0", features = ["full"] }

config = { version = "0.13", default-features = false, features = ["yaml"] }

serde = { version = "1.0.188" }
serde-aux = { version = "4.2.0" }
serde_with = { version = "3.3.0" }
serde_json = { version = "1.0.107" }

thiserror = { version = "1.0.49" }
anyhow = { version = "1.0.75" }

log = { version = "0.4.20" }
tracing = { version = "0.1.37" }
tracing-log = { version = "0.1.3" }
tracing-bunyan-formatter = { version = "0.3.9" }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
