[package]
name = "calendar-api"
version = "0.1.0"
edition = "2021"

[dependencies]
calendar-domain = { path = "../calendar-domain" }
backendsouls-json-hal = { path = "../../libraries/backendsouls-json-hal/" }

axum = { workspace = true }
tokio = { workspace = true }

config = { workspace = true }
derive_builder = { workspace = true }

serde = { workspace = true }
serde-aux = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

uuid = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-subscriber = { workspace = true }
